# solana-student-intros

./: Cargo.toml
interaction_scripts/: initialize_user_ata.ts  interact.ts
src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
