[package]
name = "solana-student-intro-reply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
solana-program = "1.14.10"
spl-associated-token-account = {version = "1.1.2", features = ["no-entrypoint"]}
spl-token = {version = "3.5.0", features = ["no-entrypoint"]}
thiserror = "1.0.37"


[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "1.14.10"
solana-sdk = "1.14.10"
